src/test/scala/Test.scala
import mylib.*

object Test:
  Main.fooCaller //works
  Main.fooCallerM //error
